<resources>
    <string name="app_name">VInos</string>
    <string name="edit">Edit</string>
    <string name="add">add</string>
    <string name="title_activity_edit_vinos">EditVinos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="button_write_extern">Write Extern</string>
    <string name="button_write_intern">Write intern</string>
    <string name="button_read_extern">Read Extern</string>
    <string name="button_read_intern">Read Intern</string>
    <string name="message_ok">Value has been written</string>
    <string name="message_no">Value has not been written</string>
    <string name="read_ok">""File without content""</string>
    <string name="read_no">File could not be read</string>
    <string name="file_name">archivo.txt</string>
    <string name="check_id">Introduce un Id de vino</string>
    <string name="checar_id">CLICK</string>
    <string name="btcancelar">cancelar</string>
    <string name="btaceptar">aceptar</string>
    <string name="nombre">Nombre</string>
    <string name="bodega">Bodega</string>
    <string name="color">Color</string>
    <string name="origen">Origen</string>
    <string name="fecha">Fecha</string>
    <string name="graduacion">Graduación</string>
    <string name="btborrar">borrar</string>
    <string name="comrpuebaid">Comprobar id existente</string>
</resources>